cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O0 -Wall -pthread -fno-elide-constructors")

add_executable(61-RotateList editor/cn/61-RotateList.cpp)
add_executable(1-TwoSum editor/cn/1-TwoSum.cpp)
add_executable(2-AddTwoNumbers editor/cn/2-AddTwoNumbers.cpp)
add_executable(344-ReverseString editor/cn/344-ReverseString.cpp)
add_executable(541-ReverseStringII editor/cn/541-ReverseStringII.cpp)
add_executable(24-SwapNodesInPairs editor/cn/24-SwapNodesInPairs.cpp)
add_executable(206-ReverseLinkedList editor/cn/206-ReverseLinkedList.cpp)
add_executable(232-ImplementQueueUsingStacks editor/cn/232-ImplementQueueUsingStacks.cpp)
add_executable(20-ValidParentheses editor/cn/20-ValidParentheses.cpp)
add_executable(1047-RemoveAllAdjacentDuplicatesInString editor/cn/1047-RemoveAllAdjacentDuplicatesInString.cpp)
add_executable(239-SlidingWindowMaximum editor/cn/239-SlidingWindowMaximum.cpp)
add_executable(347-TopKFrequentElements editor/cn/347-TopKFrequentElements.cpp)
add_executable(17-LetterCombinationsOfAPhoneNumber editor/cn/17-LetterCombinationsOfAPhoneNumber.cpp)
add_executable(131-PalindromePartitioning editor/cn/131-PalindromePartitioning.cpp)
add_executable(93-RestoreIPAddresses editor/cn/93-RestoreIPAddresses.cpp)
add_executable(90-SubsetsII editor/cn/90-SubsetsII.cpp)
add_executable(491-NonDecreasingSubsequences editor/cn/491-NonDecreasingSubsequences.cpp)
add_executable(46-Permutations editor/cn/46-Permutations.cpp)
add_executable(47-PermutationsII editor/cn/47-PermutationsII.cpp)
add_executable(455-AssignCookies editor/cn/455-AssignCookies.cpp)
add_executable(53-MaximumSubarray editor/cn/53-MaximumSubarray.cpp)
add_executable(122-BestTimeToBuyAndSellStockII editor/cn/122-BestTimeToBuyAndSellStockII.cpp)
add_executable(55-JumpGame editor/cn/55-JumpGame.cpp)
add_executable(45-JumpGameII editor/cn/45-JumpGameII.cpp)
add_executable(1005-MaximizeSumOfArrayAfterKNegations editor/cn/1005-MaximizeSumOfArrayAfterKNegations.cpp)
add_executable(134-GasStation editor/cn/134-GasStation.cpp)
add_executable(135-Candy editor/cn/135-Candy.cpp)
add_executable(406-QueueReconstructionByHeight editor/cn/406-QueueReconstructionByHeight.cpp)
add_executable(1365-HowManyNumbersAreSmallerThanTheCurrentNumber editor/cn/1365-HowManyNumbersAreSmallerThanTheCurrentNumber.cpp)
add_executable(452-MinimumNumberOfArrowsToBurstBalloons editor/cn/452-MinimumNumberOfArrowsToBurstBalloons.cpp)
add_executable(746-MinCostClimbingStairs editor/cn/746-MinCostClimbingStairs.cpp)
add_executable(62-UniquePaths editor/cn/62-UniquePaths.cpp)
add_executable(63-UniquePathsII editor/cn/63-UniquePathsII.cpp)
add_executable(739-DailyTemperatures editor/cn/739-DailyTemperatures.cpp)
add_executable(763-PartitionLabels editor/cn/763-PartitionLabels.cpp)
add_executable(343-IntegerBreak editor/cn/343-IntegerBreak.cpp)
add_executable(96-UniqueBinarySearchTrees editor/cn/96-UniqueBinarySearchTrees.cpp)
add_executable(416-PartitionEqualSubsetSum editor/cn/416-PartitionEqualSubsetSum.cpp)
add_executable(1207-UniqueNumberOfOccurrences editor/cn/1207-UniqueNumberOfOccurrences.cpp)
add_executable(189-RotateArray editor/cn/189-RotateArray.cpp)
add_executable(151-ReverseWordsInAString editor/cn/151-ReverseWordsInAString.cpp)
add_executable(445-AddTwoNumbersII editor/cn/445-AddTwoNumbersII.cpp)
add_executable(704-BinarySearch editor/cn/704-BinarySearch.cpp)
add_executable(34-FindFirstAndLastPositionOfElementInSortedArray editor/cn/34-FindFirstAndLastPositionOfElementInSortedArray.cpp)
add_executable(922-SortArrayByParityII editor/cn/922-SortArrayByParityII.cpp)
add_executable(205-IsomorphicStrings editor/cn/205-IsomorphicStrings.cpp)
add_executable(925-LongPressedName editor/cn/925-LongPressedName.cpp)
add_executable(844-BackspaceStringCompare editor/cn/844-BackspaceStringCompare.cpp)